// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`searchInput > renders correctly without children props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="_r_0_"
        aria-describedby="_r_0_"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="styles__r3pe3n1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                data-size="large"
              >
                <div
                  class="styles__r3pe3n2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                  data-testid="search-icon"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      SearchIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_1_"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with disabled prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="_r_3_"
        aria-describedby="_r_3_"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="styles__r3pe3n1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="true"
              data-error="false"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                data-size="large"
              >
                <div
                  class="styles__r3pe3n2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                  data-testid="search-icon"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      SearchIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                disabled=""
                id="_r_4_"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with error prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="_r_h_"
        aria-describedby="_r_h_"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="styles__r3pe3n1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="true"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                data-size="large"
              >
                <div
                  class="styles__r3pe3n2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                  data-testid="search-icon"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      SearchIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="true"
                class="styles__q3q8049"
                data-size="large"
                id="_r_i_"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="styles__q3q8042 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    AlertCircleIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
          >
            there is an error
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with shortcut prop > as array of string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="_r_b_"
        aria-describedby="_r_b_"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="styles__r3pe3n1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                data-size="large"
              >
                <div
                  class="styles__r3pe3n2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                  data-testid="search-icon"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      SearchIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_c_"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="styles__q3q8043 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__r3pe3n2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <kbd
                    class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-Ctrl"
                  >
                    <span
                      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    >
                      Ctrl
                    </span>
                  </kbd>
                  <kbd
                    class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-Shift"
                  >
                    <span
                      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    >
                      ⇧
                    </span>
                  </kbd>
                  <kbd
                    class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-A"
                  >
                    <span
                      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    >
                      A
                    </span>
                  </kbd>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with shortcut prop > as boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="_r_6_"
        aria-describedby="_r_6_"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="styles__r3pe3n1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                data-size="large"
              >
                <div
                  class="styles__r3pe3n2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                  data-testid="search-icon"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      SearchIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_7_"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="styles__q3q8043 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__r3pe3n2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <kbd
                    class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-Ctrl"
                  >
                    <span
                      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    >
                      Ctrl
                    </span>
                  </kbd>
                  <kbd
                    class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-K"
                  >
                    <span
                      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    >
                      K
                    </span>
                  </kbd>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
